--- a/atari/default.yaml
+++ b/atari/default.yaml
@@ -10,4 +10,9 @@ agent:
     batch_size: 16
     frame_stack: 1
     n_step: 5
- 
+    gamma: 0.99
+    target_tau: 0.005
+    # eps: 0.01
+
+w_mse:
+  
